[fix] doc card titles being cropped off

--- a/src/theme/DocCard/styles.module.css
+++ b/src/theme/DocCard/styles.module.css
@@ -20,6 +20,7 @@
 
 .cardTitle {
   font-size: 1.2rem;
+  padding-bottom: .1rem;
 }
 
 .cardDescription {
